k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ndi-en-prod-frontend
  namespace: ns-ndi-en-prod
  labels:
    component: web
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
