k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ndi-en-prod-frontend
  namespace: ns-ndi-en-prod
spec:
  ingressClassName: nginx
  rules:
  - host: ndi-en-prod-frontend.labs.iut-larochelle.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ndi-en-prod-frontend
            port:
              number: 80
